--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
@@ -6,7 +6,7 @@
         <title>Bienvenue sur ma première "page Twig"</title>
     </head>
     <body>
-        <h1>Hello world !</h1>
+        <h1>Hello {{ name }} !</h1>
         
         <p>
             Page d'accueil réalisé par chris-scientist.
