--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
@@ -8,10 +8,12 @@
     <body>
         <h1>Annonce #{{ id }}</h1>
         
-        <h2>Afficher les paramètres fourni par le contrôleur</h2>
+        <h2>Afficher des messages flash (contenus en session)</h2>
         
         <p>
-            ID de l'annonce : {{ id }}
+            {% for message in app.session.flashbag.get('info') %}
+                <p>Message flash : {{ message }}</p>
+            {% endfor %}
         </p>
         
         <p>
