Amélioration du contrôleur Création de vues "bidon" Paramètre webmaster défini dans app/config/config.yml et déclaré dans app/config/parameters.yml

--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
@@ -8,6 +8,10 @@
     <body>
         <h1>Hello !</h1>
         
+        <ul>
+            <li><a href="{{ url('chris_scientist_platform_add') }}" >Créer une annonce</a></li>
+        </ul>
+        
         <h2>Génération d'URL dans Twig</h2>
         
         <dl>
@@ -18,7 +22,7 @@
         </dl>
         
         <p>
-            Page d'accueil réalisé par chris-scientist.
+            Page d'accueil réalisée par {{ webmaster }}.
         </p>
     </body>
 </html>
