--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/add.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/add.html.twig
@@ -1,23 +1,21 @@
 {# src/ChrisScientistPlatformBundle/Ressources/Advert/add.html.twig #}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Créer annonce</title>
-    </head>
-    <body>
-        <h1>Platforme T</h1>
-        
-        <p>
-            Formulaire de création en construction...
-        </p>
-        
-        <p>
-            <a href="{{ url('chris_scientist_platform_view', {'id':33}) }}" >Voir l'annonce 33</a>
-        </p>
-        
-        <p>
-            <a href="{{ url('chris_scientist_platform_home') }}" >Retour à l'accueil</a> | Page réalisée par {{ webmaster }}.
-        </p>
-    </body>
-</html>
+{% extends "ChrisScientistPlatformBundle::layout_bundle.html.twig" %}
+
+{% block title %}
+    Créer annonce - {{ parent() }}
+{% endblock %}
+
+{% block chris_scientist_platform_body %}
+    <p>
+        Formulaire de création en construction...
+    </p>
+
+    <p>
+        <a href="{{ url('chris_scientist_platform_view', {'id':33}) }}" >Voir l'annonce 33</a>
+    </p>
+{% endblock %}
+
+{% block footer %}
+    <a href="{{ url('chris_scientist_platform_home') }}" >Retour à l'accueil</a> | {{ parent() }}
+{% endblock %}
