--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/delete.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/delete.html.twig
@@ -1,19 +1,17 @@
-{# src/ChrisScientistPlatformBundle/Ressources/Advert/add.html.twig #}
+{# src/ChrisScientistPlatformBundle/Ressources/Advert/delete.html.twig #}
 
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Supprimer annonce</title>
-    </head>
-    <body>
-        <h1>Platforme T</h1>
-        
-        <p>
-            Suppression en développement...
-        </p>
-        
-        <p>
-            <a href="{{ url('chris_scientist_platform_home') }}" >Retour à l'accueil</a> | Page réalisée par {{ webmaster }}.
-        </p>
-    </body>
-</html>
+{% extends "ChrisScientistPlatformBundle::layout_bundle.html.twig" %}
+
+{% block title %}
+    Supprimer annonce - {{ parent() }}
+{% endblock %}
+
+{% block chris_scientist_platform_body %}
+    <p>
+        Suppression en développement...
+    </p>
+{% endblock %}
+
+{% block footer %}
+    <a href="{{ url('chris_scientist_platform_home') }}" >Retour à l'accueil</a> | {{ parent() }}
+{% endblock %}
