--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
@@ -7,13 +7,13 @@
 {% endblock %}
 
 {% block chris_scientist_platform_body %}
-    <h2>Annonce #{{ id }}</h2>
+    <h2>Annonce #{{ advert.id }}</h2>
         
     <h3>Afficher des messages flash (contenus en session)</h3>
 
     <ul>
-        <li><a href="{{ url('chris_scientist_platform_edit', {'id':id}) }}" >Modifier</a></li>
-        <li><a href="{{ url('chris_scientist_platform_delete', {'id':id}) }}" >Supprimer</a></li>
+        <li><a href="{{ url('chris_scientist_platform_edit', {'id':advert.id}) }}" >Modifier</a></li>
+        <li><a href="{{ url('chris_scientist_platform_delete', {'id':advert.id}) }}" >Supprimer</a></li>
     </ul>
 
     <p>
