Gestion de formulaires de saisie (création / édition d'objets)

--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/add.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/add.html.twig
@@ -10,10 +10,8 @@
     <p>
         Formulaire de création en construction...
     </p>
-
-    <p>
-        <a href="{{ url('chris_scientist_platform_view', {'id':33}) }}" >Voir l'annonce 33</a>
-    </p>
+    
+    {{ include("ChrisScientistPlatformBundle:Advert:form.html.twig") }}
 {% endblock %}
 
 {% block footer %}
