--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/edit.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/edit.html.twig
@@ -10,6 +10,8 @@
     <p>
         Formulaire de modification en construction...
     </p>
+    
+    {{ include("ChrisScientistPlatformBundle:Advert:form.html.twig") }}
 {% endblock %}
 
 {% block footer %}
