Formulaire de saisie avec champ fichier : bug constaté (image non uploadée)

--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/view.html.twig
@@ -21,6 +21,11 @@
             <p>Message flash : {{ message }}</p>
         {% endfor %}
     </p>
+    
+    {% if not(advert.image is null) %}
+        <img src="{{ asset(advert.image.path) }}" 
+             alt="{{ advert.image.alt }}" />
+    {% endif %}
 {% endblock %}
 
 {% block footer %}
