--- a/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/ChrisScientistPlatformBundle/Resources/views/Advert/index.html.twig
@@ -14,6 +14,15 @@
             <li>Pas d'action disponible.</li>
         {% endif %}
     </ul>
+    
+    <h2>Debug Area</h2>
+    <p>
+    {% if checkIfSpam('012345678') %}
+        C'est du spam !
+    {% else %}
+        Ce n'est pas du spam :)
+    {% endif %}
+    </p>
 
     <h2>Liste des annonces</h2>
     
